<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/caViewPager"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="80dp"/>

    <RelativeLayout android:orientation="horizontal" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="20dp">
        <Button
                android:id="@+id/btnNextStep"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/next_step"
                android:background="@drawable/ripple_effect"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
        />
    </RelativeLayout>
</RelativeLayout>